added step-by-step procedure

--- a/templates/FAQs.html
+++ b/templates/FAQs.html
@@ -5,120 +5,153 @@
 {% block content %}
 &nbsp;
   <h3 class="text-center mb-4 pb-2 text-success fw-bold">FREQUENTLY ASKED QUESTIONS</h3>
-  <p class="text-center mb-5">
-    Find the answers for the most frequently asked questions regarding the COVID-19 vaccines.
-  </p>
 
- <div class="container mt-5 mb-5">
-    <div class="row justify-content-center">
-        <div class="col-lg-8">
-            <div class="card">
-              <article class="card-body">
-                <div class="accordion" id="accordionExample">
-                  <div class="accordion-item">
-                    <h2 class="accordion-header" id="headingOne">
-                      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne" >
-                        <strong>How do vaccines prevent disease?</strong>
-                      </button>
-                    </h2>
-                    <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
-                      <div class="accordion-body">
-                        Vaccines mimic the virus or bacteria that causes disease and triggers the body’s creation of antibodies. These antibodies will provide protection once a person
-                        is infected with the actual disease-causing virus or bacteria.
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-6 mb-4">
+                <div class="card">
+                    <header class="card-header">
+                      <h4 class="card-title mt-2">Answers to most of the frequently asked questions about COVID-19 Vaccines</h4>
+                    </header>
+                <article class="card-body">
+                  <div class="accordion" id="accordionExample">
+                    <div class="accordion-item">
+                      <h2 class="accordion-header" id="headingOne">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne" >
+                          <strong>How do vaccines prevent disease?</strong>
+                        </button>
+                      </h2>
+                      <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+                        <div class="accordion-body">
+                          Vaccines mimic the virus or bacteria that causes disease and triggers the body’s creation of antibodies. These antibodies will provide protection once a person
+                          is infected with the actual disease-causing virus or bacteria.
+                        </div>
+                      </div>
+                    </div>
+
+
+                    <div class="accordion-item">
+                      <h2 class="accordion-header" id="headingTwo">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                          <strong>How do vaccines differ?</strong>
+                        </button>
+                      </h2>
+                      <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
+                        <div class="accordion-body">
+                          Vaccines differ in their composition and how they trigger the immune response to create antibodies. These antibodies protect the body from microorganisms and serve as protection
+                          once a person gets infected with disease. Vaccines can be inactivated, weakened or killed copies of the whole or part of the virus or bacteria, or genetic product (like mRNA vaccines)
+                          that creates protein copies without causing disease.
+                        </div>
+                      </div>
+                    </div>
+
+
+                    <div class="accordion-item">
+                      <h2 class="accordion-header" id="headingThree">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                          <strong>What are the possible side effects of vaccination?</strong>
+                        </button>
+                      </h2>
+                      <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+                        <div class="accordion-body">
+                          The possible side effects of a vaccine include pain, redness, itchiness or swelling at the injection site (which may last a few hours); fever; feeling of weakness or fatigue; headache; dizziness; diarrhea; or nausea.
+                          Consult the nearest healthcare professional if you experience any of these.
+                        </div>
+                      </div>
+                    </div>
+
+
+                    <div class="accordion-item">
+                      <h2 class="accordion-header" id="headingFour">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+                          <strong>Is vaccination mandatory?</strong>
+                        </button>
+                      </h2>
+                      <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour" data-bs-parent="#accordionExample">
+                        <div class="accordion-body">
+                          No, vaccination is not mandatory. But the government highly encourages the public to get vaccinated and be protected against preventable disease.
+                        </div>
+                      </div>
+                    </div>
+
+                    <div class="accordion-item">
+                      <h2 class="accordion-header" id="headingFive">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
+                          <strong>Why do we need to get vaccinated for COVID-19?</strong>
+                        </button>
+                      </h2>
+                      <div id="collapseFive" class="accordion-collapse collapse" aria-labelledby="headingFive" data-bs-parent="#accordionExample">
+                        <div class="accordion-body">
+                          With the BIDA steps and observance of minimum public health standards,
+                          vaccination is an important way to protect yourself from getting severe COVID-19.
+                        </div>
+                      </div>
+                    </div>
+
+                    <div class="accordion-item">
+                      <h2 class="accordion-header" id="headingSix">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseSix" aria-expanded="false" aria-controls="collapseSix">
+                          <strong>Are the COVID-19 vaccines safe and effective?</strong>
+                        </button>
+                      </h2>
+                      <div id="collapseSix" class="accordion-collapse collapse" aria-labelledby="headingSix" data-bs-parent="#accordionExample">
+                        <div class="accordion-body">
+                          COVID-19 vaccines that are granted with Emergency Use Authorization (EUA) by the Food and Drug Administration (FDA) are considered safe and effective
+                          based on the available evidence to date.
+                        </div>
+                      </div>
+                    </div>
+
+                    <div class="accordion-item">
+                      <h2 class="accordion-header" id="headingSeven">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseSeven" aria-expanded="false" aria-controls="collapseSeven">
+                          <strong>Are there risks for complications when given the COVID-19 vaccine?</strong>
+                        </button>
+                      </h2>
+                      <div id="collapseSeven" class="accordion-collapse collapse" aria-labelledby="headingSeven" data-bs-parent="#accordionExample">
+                        <div class="accordion-body">
+                          Yes, like all other vaccines, there are risks of complications BUT SEVERE OR LIFE-THREATENING REACTIONS ARE EXTREMELY RARE. The benefit of protection against severe COVID-19 is greater than the risk.
+                          Anyone who will get the vaccine will be properly evaluated and closely monitored by health professionals to further minimize any risk.
+                        </div>
                       </div>
                     </div>
                   </div>
-
-
-                  <div class="accordion-item">
-                    <h2 class="accordion-header" id="headingTwo">
-                      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                        <strong>How do vaccines differ?</strong>
-                      </button>
-                    </h2>
-                    <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
-                      <div class="accordion-body">
-                        Vaccines differ in their composition and how they trigger the immune response to create antibodies. These antibodies protect the body from microorganisms and serve as protection
-                        once a person gets infected with disease. Vaccines can be inactivated, weakened or killed copies of the whole or part of the virus or bacteria, or genetic product (like mRNA vaccines)
-                        that creates protein copies without causing disease.
-                      </div>
-                    </div>
-                  </div>
-
-
-                  <div class="accordion-item">
-                    <h2 class="accordion-header" id="headingThree">
-                      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                        <strong>What are the possible side effects of vaccination?</strong>
-                      </button>
-                    </h2>
-                    <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
-                      <div class="accordion-body">
-                        The possible side effects of a vaccine include pain, redness, itchiness or swelling at the injection site (which may last a few hours); fever; feeling of weakness or fatigue; headache; dizziness; diarrhea; or nausea.
-                        Consult the nearest healthcare professional if you experience any of these.
-                      </div>
-                    </div>
-                  </div>
-
-
-                  <div class="accordion-item">
-                    <h2 class="accordion-header" id="headingFour">
-                      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
-                        <strong>Is vaccination mandatory?</strong>
-                      </button>
-                    </h2>
-                    <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour" data-bs-parent="#accordionExample">
-                      <div class="accordion-body">
-                        No, vaccination is not mandatory. But the government highly encourages the public to get vaccinated and be protected against preventable disease.
-                      </div>
-                    </div>
-                  </div>
-
-                  <div class="accordion-item">
-                    <h2 class="accordion-header" id="headingFive">
-                      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
-                        <strong>Why do we need to get vaccinated for COVID-19?</strong>
-                      </button>
-                    </h2>
-                    <div id="collapseFive" class="accordion-collapse collapse" aria-labelledby="headingFive" data-bs-parent="#accordionExample">
-                      <div class="accordion-body">
-                        With the BIDA steps and observance of minimum public health standards,
-                        vaccination is an important way to protect yourself from getting severe COVID-19.
-                      </div>
-                    </div>
-                  </div>
-
-                  <div class="accordion-item">
-                    <h2 class="accordion-header" id="headingSix">
-                      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseSix" aria-expanded="false" aria-controls="collapseSix">
-                        <strong>Are the COVID-19 vaccines safe and effective?</strong>
-                      </button>
-                    </h2>
-                    <div id="collapseSix" class="accordion-collapse collapse" aria-labelledby="headingSix" data-bs-parent="#accordionExample">
-                      <div class="accordion-body">
-                        COVID-19 vaccines that are granted with Emergency Use Authorization (EUA) by the Food and Drug Administration (FDA) are considered safe and effective
-                        based on the available evidence to date.
-                      </div>
-                    </div>
-                  </div>
-
-                  <div class="accordion-item">
-                    <h2 class="accordion-header" id="headingSeven">
-                      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseSeven" aria-expanded="false" aria-controls="collapseSeven">
-                        <strong>Are there risks for complications when given the COVID-19 vaccine?</strong>
-                      </button>
-                    </h2>
-                    <div id="collapseSeven" class="accordion-collapse collapse" aria-labelledby="headingSeven" data-bs-parent="#accordionExample">
-                      <div class="accordion-body">
-                        Yes, like all other vaccines, there are risks of complications BUT SEVERE OR LIFE-THREATENING REACTIONS ARE EXTREMELY RARE. The benefit of protection against severe COVID-19 is greater than the risk.
-                        Anyone who will get the vaccine will be properly evaluated and closely monitored by health professionals to further minimize any risk.
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </article>
+                </article>
             </div>
         </div>
+        <div class="col-lg-6 mb-4">
+                <div class="card">
+                    <header class="card-header">
+                      <h4 class="card-title mt-2">How to use the COVID-19 Vaccine Scheduling System</h4>
+                    </header>
+
+                    <article class="card-body">
+                      <div>
+                      <span class="circle">1</span>
+                      <span class="label"><strong>Sign Up:</strong> </span>
+                      <ul style="list-style-position: inside; vertical-align: middle;">
+                          <li>A registered user will be able to use the full functionalities of the system.</li>
+                      </ul>
+                      </div>
+                      <div>
+                          <span class="circle">2</span>
+                          <span class="label"><strong>Schedule Appointment Page: </strong></span>
+                          <ul style="list-style-position: inside; vertical-align: middle;">
+                              <li><strong>Hospital Locations:</strong> First, select the nearest hospital in your area. </li>
+                              <li><strong>Hospital Information:</strong> Then, select your preffered vaccines that are available in that specific hospital and select your preferred appointment schedule.</li>
+                          </ul>
+                      </div>
+                      <div>
+                          <span class="circle">3</span>
+                          <span class="label"><strong>View Appointment:</strong></span>
+                          <ul style="list-style-position: inside; vertical-align: middle;">
+                              <li>After making an appointment, you may now view it via our system and will also receive an SMS notification about yur appointment details.</li>
+                          </ul>
+                      </div>
+                    </article>
+                </div>
+          </div>
     </div>
   </div>
+ </div>
 {% endblock %}
