fixed grammar in steps and faqs

--- a/templates/FAQs.html
+++ b/templates/FAQs.html
@@ -145,7 +145,7 @@
                           <span class="circle">3</span>
                           <span class="label"><strong>View Appointment:</strong></span>
                           <ul style="list-style-position: inside; vertical-align: middle;">
-                              <li>After making an appointment, you may now view it via our system and will also receive an SMS notification about yur appointment details.</li>
+                              <li>After making an appointment, you may now view it via our system and you will also receive an SMS notification about your appointment details.</li>
                           </ul>
                       </div>
                     </article>
