added embedded YT video

--- a/templates/FAQs.html
+++ b/templates/FAQs.html
@@ -5,7 +5,12 @@
 {% block content %}
 &nbsp;
   <h3 class="text-center mb-4 pb-2 text-success fw-bold">FREQUENTLY ASKED QUESTIONS</h3>
-
+<center>
+   <div class="embed-responsive embed-responsive-21by9">
+      <iframe class="embed-responsive-item" width="560" height="315" src="https://www.youtube.com/embed/TPmmwpY3B7w" allowfullscreen></iframe>
+    </div>
+</center>
+&nbsp;
     <div class="container">
         <div class="row">
             <div class="col-lg-6 mb-4">
@@ -153,5 +158,5 @@
           </div>
     </div>
   </div>
- </div>
+
 {% endblock %}
