fixed modal href link

--- a/templates/Home.html
+++ b/templates/Home.html
@@ -52,7 +52,7 @@
                 <h5 class="modal-title">First Time User?</h5>
             </div>
             <div class="modal-body">
-              <strong>Follow these simple steps to proceed with your scheduling:</strong> <a href="{{ url_for('Steps') }}" class="stretched-link">Step-by-Step Procedure</a>
+              <strong>Follow these simple steps to proceed with your scheduling:</strong> <a href="{{ url_for('Steps') }}" class="stretched-link">How to use the COVID-19 Vaccine Scheduling System</a>
             </div>
             <div class="modal-footer">
               <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Close</button>
