changed the wordings and added a header

--- a/templates/ScheduleAppointment.html
+++ b/templates/ScheduleAppointment.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <script type="text/javascript">
         var nearest = "{{lowestdistance|safe}}";
-        
+
         var json_data = {{ json_data|tojson|safe }};
 
         function clearvalues() {
@@ -35,7 +35,7 @@
               "text": date
             }));
           };
-          
+
         }
 
         window.onload = clearvalues;
@@ -75,6 +75,7 @@
 {% extends "base.html" %}
 {% block title %}Schedule Appointment{% endblock %}
 {% block content %}
+  <h3 class="text-center mb-4 pb-2 text-success fw-bold">SCHEDULE YOUR APPOINTMENT HERE</h3>
 <form method="POST" id="appointment-details">
   {{ form.hidden_tag() }}
   <div class="form-row mt-3">
@@ -83,38 +84,38 @@
             <div class="col-sm-6">
                 <div class="card">
                     <header class="card-header">
-                        <h4 class="card-title mt-2">Hospital Locations</h4>
+                        <h4 class="card-title mt-2">Vaccination Sites Locations</h4>
                     </header>
                     <article class="card-body">
                         <iframe class="map", src="{{url_for('static', filename='map.html')}}" width="720" height="620"></iframe>
                     </article>
                 </div>
             </div>
-  
+
             <div class="col-sm-6">
                 <div class="card">
                     <header class="card-header">
-                      <h4 class="card-title mt-2">Hospital Locations</h4>
+                      <h4 class="card-title mt-2">Vaccination Sites Locations</h4>
                     </header>
-              
+
                     <article class="card-body">
-                      <h4 class="card-title mt-2">Suggested Location: {{lowestdistance}} </h4>
+                      <h4 class="card-title mt-2">Suggested Vaccination Sites: {{lowestdistance}} </h4>
                     </article>
                 </div>
-                
+
                 <div class="card my-3 py-2">
                   <header class="card-header">
-                      <h4 class="card-title mt-2">Hospital Information</h4>
+                      <h4 class="card-title mt-2">Vaccination Sites Appointments</h4>
                   </header>
-    
+
                   <article class="card-body">
-                      <h6 class="card-text">Hospital Name:</h6>
-    
+                      <h6 class="card-text">Vaccination Site Name:</h6>
+
                       <div class="form-group">
                         {{ form.hospitalname(class="form-select", placeholder="Hospital Name", id ="hospitalname", onchange="changeHospInfo(this)") }}
                       </div>
-    
-                      <h6 class="card-text">Hospital Address:</h6>
+
+                      <h6 class="card-text">Vaccination Site Address:</h6>
                       <div class="form-group">
                         {{ form.hospitaladdress(class="form-control readonly", id="hospitaladdress") }}
                       </div>
@@ -122,17 +123,17 @@
                           $("#hospitaladdress").prop("readonly", true);
                       </script>
                       <br>
-    
+
                       <h6 class="card-text">Available Vaccines: </h6>
                       <div class="form-group">
                         {{ form.availablevaccines(class="form-select", placeholder="Available Vaccines", id="available_vaccines") }}
                       </div>
-    
+
                       <h6 class="card-text">Expected Date of Vaccination:</h6>
                       <div class="form-group">
                         {{ form.vaccineschedule(class="form-select", placeholder="Expected Date of Vaccination", id="expected_date") }}
                       </div>
-    
+
                       <div class="d-grid gap-2 my-2">
                         {{ form.schedule(class="btn btn-primary btn-block") }}
                       </div>
@@ -140,7 +141,7 @@
                 </div>
             </div>
 
-            
+
         </div>
     </div>
   </div>
