changed some wordings

--- a/templates/Steps.html
+++ b/templates/Steps.html
@@ -21,8 +21,8 @@
                       <span class="circle">2</span>
                       <span class="label"><strong>Schedule Appointment Page: </strong></span>
                       <ul style="list-style-position: inside; vertical-align: middle;">
-                          <li><strong>Hospital Locations:</strong> First, select the nearest hospital in your area. </li>
-                          <li><strong>Hospital Information:</strong> Then, select your preffered vaccines that are available in that specific hospital and select your preferred appointment schedule.</li>
+                          <li><strong>Vaccination Sites Locations:</strong> First, select a nearest vaccination site in your area. </li>
+                          <li><strong>Vaccination Sites Appointments:</strong> Then, select your preferred vaccines that are available in that specific vaccination site and select your preferred schedule.</li>
                       </ul>
                   </div>
                   <div>
