changed some wordings

--- a/templates/FAQs.html
+++ b/templates/FAQs.html
@@ -133,7 +133,7 @@
                     <article class="card-body">
                       <div>
                       <span class="circle">1</span>
-                      <span class="label"><strong>Sign Up:</strong> </span>
+                      <span class="label"><strong>Sign Up Page:</strong> </span>
                       <ul style="list-style-position: inside; vertical-align: middle;">
                           <li>A registered user will be able to use the full functionalities of the system.</li>
                       </ul>
@@ -148,7 +148,7 @@
                       </div>
                       <div>
                           <span class="circle">3</span>
-                          <span class="label"><strong>View Appointment:</strong></span>
+                          <span class="label"><strong>View Appointment Page:</strong></span>
                           <ul style="list-style-position: inside; vertical-align: middle;">
                               <li>After making an appointment, you may now view it via our system and you will also receive an SMS notification about your appointment details.</li>
                           </ul>
