fixed fonts and design

--- a/templates/FAQs.html
+++ b/templates/FAQs.html
@@ -4,7 +4,7 @@
 {% block title %}Frequently Asked Questions{% endblock %}
 {% block content %}
 &nbsp;
-  <h3 class="text-center mb-4 pb-2 text-success fw-bold">FREQUENTLY ASKED QUESTIONS</h3>
+  <h3 class="text-center mb-4 pb-2 text-success fw-bold" style = "font-family: 'Poppins', sans-serif;">FREQUENTLY ASKED QUESTIONS</h3>
 <center>
    <div class="embed-responsive embed-responsive-21by9">
       <iframe class="embed-responsive-item" width="560" height="315" src="https://www.youtube.com/embed/TPmmwpY3B7w" allowfullscreen></iframe>
