--- a/templates/Home.html
+++ b/templates/Home.html
@@ -3,13 +3,10 @@
 {% extends "base.html" %}
 {% block title %}Home{% endblock %}
 {% block content %}
-<div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
-  <div class="carousel-indicators">
-    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
-  </div>
+<section>
+<div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
   <div class="carousel-inner">
+    <div class="carousel-inner">
     <div class="carousel-item active">
       <img src="{{ register_vaccine }}" class="d-block w-100" alt="First Slide">
       <div class="carousel-caption d-none d-md-block">
@@ -29,19 +26,19 @@
       </div>
     </div>
   </div>
-  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
     <span class="visually-hidden">Previous</span>
   </button>
-  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="next">
     <span class="carousel-control-next-icon" aria-hidden="true"></span>
     <span class="visually-hidden">Next</span>
   </button>
 </div>
-
 <script>
     $(document).ready(function(){
         $("#myModal").modal('show');
+
     });
 </script>
 
@@ -49,10 +46,21 @@
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title">First Time User?</h5>
+                <h5 class="modal-title" style = "font-family: 'Poppins', sans-serif;">First Time User?</h5>
             </div>
             <div class="modal-body">
-              <strong>Follow these simple steps to proceed with your scheduling:</strong> <a href="{{ url_for('Steps') }}" class="stretched-link">How to use the COVID-19 Vaccine Scheduling System</a>
+                <center><h4 style="font-family: 'Poppins', sans-serif;"><strong>Welcome!</strong></h4></center>
+               <center>
+                   <img
+                  src="https://www.mbsdirect.com/images/blog/art_images/2021-05-12-7b5f8/Vaccinate-graphic.png"
+                  alt="RESBAKUNA DOH Logo"
+                  loading="lazy"/>
+               </center>
+                <br><p style = "font-family: 'Poppins', sans-serif;">The COVID-19 Vaccine Scheduling System will help those unvaccinated to make an appointment at the
+                    nearest vaccination centers with the preference and availability of the vaccines on each site.</p>
+             <br>
+              <strong style = "font-family: 'Poppins', sans-serif;">Follow these simple steps to proceed with your scheduling:</strong>
+                <br><br><center><a href="{{ url_for('Steps') }}" class="stretched-link" style = "font-family: 'Poppins', sans-serif;">How to use the COVID-19 Vaccine Scheduling System</a></center>
             </div>
             <div class="modal-footer">
               <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Close</button>
@@ -60,34 +68,51 @@
         </div>
     </div>
 </div>
+     <script src=
+"https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity=
+"sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous">
+    </script>
+    <script src=
+"https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+        integrity=
+"sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+        crossorigin="anonymous">
+    </script>
+    <script src=
+"https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
+        integrity=
+"sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+        crossorigin="anonymous">
+    </script>
 {%if current_user.is_authenticated %}
  <div class="d-grid gap-2">
    <a class="btn btn-success" href="{{ url_for('ScheduleAppointment') }}" role="button">Schedule Appointment</a>
  </div>
  {% endif %}
 &nbsp;
-
 <div class="container marketing">
 
     <!-- First Three columns of text below the carousel -->
     <div class="row">
       <div class="col-lg-4">
         <img src="{{ vaccine_pic }}" width="240" height="240" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 240x240" preserveAspectRatio="xMidYMid slice" focusable="false" align="center">
-        <h2>Pfizer BioNTech</h2>
-        <p><h6>Dose and Frequency:</h6> 2 doses and 21 days apart</p>
+        <h2 style="font-family: 'Nunito', sans-serif; font-weight: bold;">Pfizer BioNTech</h2>
+        <p><h6 >Dose and Frequency:</h6> 2 doses and 21 days apart</p>
         <p><h6>Vaccine Efficacy:</h6> 95% against symptomatic COVID-19</p>
 
       </div><!-- /.col-lg-4 -->
       <div class="col-lg-4">
         <img src="{{ vaccine_pic }}" width="240" height="240" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 240x240" preserveAspectRatio="xMidYMid slice" focusable="false" align="center">
-        <h2>Oxford AstraZeneca</h2>
+        <h2 style="font-family: 'Nunito', sans-serif; font-weight: bold;">Oxford AstraZeneca</h2>
         <p><h6>Dose and Frequency:</h6> 2 doses and 4-12 weeks apart</p>
         <p><h6>Vaccine Efficacy:</h6> 70.4% against symptomatic COVID-19; 100% against severe COVID-19</p>
       </div><!-- /.col-lg-4 -->
 
       <div class="col-lg-4">
         <img src="{{ vaccine_pic }}" width="240" height="240" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 240x240" preserveAspectRatio="xMidYMid slice" focusable="false" align="center">
-        <h2>Sinovac CoronaVac</h2>
+        <h2 style="font-family: 'Nunito', sans-serif; font-weight: bold;">Sinovac CoronaVac</h2>
         <p><h6>Dose and Frequency:</h6> 2 doses and 28 days apart</p>
         <p><h6>Vaccine Efficacy:</h6> 65-91% (based on Brazil, Indonesia, and Turkey Trials)</p>
       </div><!-- /.col-lg-4 -->
@@ -97,21 +122,21 @@
     <div class="row">
       <div class="col-lg-4">
         <img src="{{ vaccine_pic }}" width="240" height="240" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 240x240" preserveAspectRatio="xMidYMid slice" focusable="false" align="center">
-        <h2>Gamaleya Sputnik V</h2>
+        <h2 style="font-family: 'Nunito', sans-serif; font-weight: bold;">Gamaleya Sputnik V</h2>
         <p><h6>Dose and Frequency:</h6> 2 doses and 21 days apart</p>
         <p><h6>Vaccine Efficacy:</h6> 91.6% against symptomatic COVID-19; 100% against moderate or severe cases </p>
 
       </div><!-- /.col-lg-4 -->
       <div class="col-lg-4">
         <img src="{{ vaccine_pic }}" width="240" height="240" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 240x240" preserveAspectRatio="xMidYMid slice" focusable="false" align="center">
-        <h2>Bharat BioTech</h2>
+        <h2 style="font-family: 'Nunito', sans-serif; font-weight: bold;">Bharat BioTech</h2>
         <p><h6>Dose and Frequency:</h6> 2 doses and 14 days apart</p>
         <p><h6>Vaccine Efficacy:</h6> 80.6% against PCR-confirmed symptomatic COVID-19 </p>
       </div><!-- /.col-lg-4 -->
 
       <div class="col-lg-4">
         <img src="{{ vaccine_pic }}" width="240" height="240" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 240x240" preserveAspectRatio="xMidYMid slice" focusable="false" align="center">
-        <h2>Moderna</h2>
+        <h2 style="font-family: 'Nunito', sans-serif; font-weight: bold;">Moderna</h2>
         <p><h6>Dose and Frequency:</h6> 2 doses and 28 days apart</p>
         <p><h6>Vaccine Efficacy:</h6> 94.1% against symptomatic COVID-19; 100% against severe COVID-19 </p>
       </div><!-- /.col-lg-4 -->
@@ -121,31 +146,21 @@
     <div class="row">
       <div class="col-lg-4">
         <img src="{{ vaccine_pic }}" width="240" height="240" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 240x240" preserveAspectRatio="xMidYMid slice" focusable="false" align="center">
-        <h2>Novavax</h2>
+        <h2 style="font-family: 'Nunito', sans-serif; font-weight: bold;">Novavax</h2>
         <p><h6>Dose and Frequency:</h6> 2 doses and 21 days apart</p>
         <p><h6>Vaccine Efficacy:</h6> Awaiting Official Phase III Interim Journal Publication </p>
 
       </div><!-- /.col-lg-4 -->
       <div class="col-lg-4">
         <img src="{{ vaccine_pic }}" width="240" height="240" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 240x240" preserveAspectRatio="xMidYMid slice" focusable="false" align="center">
-        <h2>Janssen</h2>
+        <h2 style="font-family: 'Nunito', sans-serif; font-weight: bold;">Janssen</h2>
         <p><h6>Dose and Frequency:</h6> 1 dose </p>
         <p><h6>Vaccine Efficacy:</h6> 66.1-66.9% against confirmed moderate to severe/critical COVID-19 </p>
       </div><!-- /.col-lg-4 -->
 
     </div><!-- /.row -->
+</section>
 
 
-  <hr class="featurette-divider">
 
-    <!-- /END THE FEATURETTES -->
-
-  </div><!-- /.container -->
-
-
-  <!-- FOOTER -->
-  <footer class="container">
-    <p class="float-end"><a href="#">Back to top</a></p>
-    <p>&copy; 2022–2023 Company, Inc.</p>
-  </footer>
 {% endblock %}
