--- a/templates/ScheduleAppointment.html
+++ b/templates/ScheduleAppointment.html
@@ -75,7 +75,7 @@
 {% extends "base.html" %}
 {% block title %}Schedule Appointment{% endblock %}
 {% block content %}
-  <h3 class="text-center mb-4 pb-2 text-success fw-bold">SCHEDULE YOUR APPOINTMENT HERE</h3>
+  <h3 class="text-center mb-4 pb-2 text-success fw-bold" style = "font-family: 'Poppins', sans-serif;">SCHEDULE YOUR APPOINTMENT HERE</h3>
 <form method="POST" id="appointment-details">
   {{ form.hidden_tag() }}
   <div class="form-row mt-3">
