--- a/templates/Steps.html
+++ b/templates/Steps.html
@@ -4,7 +4,7 @@
 {% block title %}Steps{% endblock %}
 {% block content %}
 &nbsp;
-<h3 class="text-center mb-4 pb-2 text-success fw-bold">HOW TO USE THE COVID-19 SCHEDULING SYSTEM</h3>
+<h3 class="text-center mb-4 pb-2 text-success fw-bold" style = "font-family: 'Poppins', sans-serif;">HOW TO USE THE COVID-19 SCHEDULING SYSTEM</h3>
  <div class="container mt-5 mb-5">
     <div class="row justify-content-center">
         <div class="col-lg-8">
