--- a/templates/ViewAppointment.html
+++ b/templates/ViewAppointment.html
@@ -3,7 +3,7 @@
 {% extends "base.html" %}
 {% block title %}View Appointment{% endblock %}
 {% block content %}
-  <h3 class="text-center mb-4 pb-2 text-success fw-bold">VIEW YOUR APPOINTMENT HERE</h3>
+  <h3 class="text-center mb-4 pb-2 text-success fw-bold" style = "font-family: 'Poppins', sans-serif;">VIEW YOUR APPOINTMENT HERE</h3>
        <div class="container mt-5 mb-5">
         <div class="row justify-content-center">
             <div class="col-lg-8">
