--- a/templates/base.html
+++ b/templates/base.html
@@ -1,6 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Nunito&display=swap" rel="stylesheet">
+
+    <link href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.css" rel="stylesheet"  type='text/css'>
+
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" type="text/css">
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.bundle.min.js" type="text/javascript"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js" type="text/javascript"></script>
+    <link src="https://use.fontawesome.com/releases/v5.8.1/css/all.css" rel="stylesheet"  type='text/css'>
+
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
@@ -32,12 +48,21 @@
         text-align: center;
         width: 40px;
       }
+      #btn-back-to-top {
+      position: fixed;
+      bottom: 20px;
+      right: 20px;
+      display: none;
+    }
+    body {
+      background:#F8F8FF;
+    }
     </style>
     <meta charset="UTF-8">
     <title>{% block title %}{% endblock %}</title>
 </head>
 <body>
-    <nav class="navbar navbar-expand-md bg-dark navbar-dark">
+    <nav class="navbar navbar-expand-md bg-success navbar-success">
       <!-- Brand -->
       <a class="navbar-brand mt-2 mt-lg-0" href="{{ url_for('Home') }}">
         <img
@@ -57,32 +82,32 @@
       <div class="navbar navbar-collapse" id="collapsibleNavbar">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="{{ url_for('Home') }}">Home</a>
+            <a class="nav-link text-white" style="font-family: 'Poppins', sans-serif; font-size: 18px;" href="{{ url_for('Home') }}">Home</a>
           </li>
             <li class="nav-item active">
-                <a class="nav-link" href="{{ url_for('FAQs') }}">FAQs</a>
+                <a class="nav-link text-white" style="font-family: 'Poppins', sans-serif; font-size: 18px;" href="{{ url_for('FAQs') }}">FAQs</a>
             </li>
             <li class="nav-item active">
-            <a class="nav-link" href="{{ url_for('ScheduleAppointment') }}">Schedule Appointment</a>
+            <a class="nav-link text-white" style="font-family: 'Poppins', sans-serif; font-size: 18px;" href="{{ url_for('ScheduleAppointment') }}">Schedule Appointment</a>
           </li>
           <li class="nav-item active">
-            <a class="nav-link" href="{{ url_for('ViewAppointment') }}">View Appointment</a>
+            <a class="nav-link text-white" style="font-family: 'Poppins', sans-serif; font-size: 18px;" href="{{ url_for('ViewAppointment') }}">View Appointment</a>
           </li>
         </ul>
         {%if current_user.is_authenticated %}
         <ul class="navbar-nav ms-auto">
 
               <li class="nav-item active">
-                  <a class="nav-link">Welcome, {{ current_user.email_address }}</a>
+                  <a class="nav-link text-white" style="font-family: 'Poppins', sans-serif; font-size: 18px;">Welcome, {{ current_user.email_address }}</a>
               </li>
               <li class="nav-item active">
-                  <a class="nav-link" href="{{ url_for('Logout') }}">Logout</a>
+                  <a class="nav-link text-white" style="font-family: 'Poppins', sans-serif; font-size: 18px;"href="{{ url_for('Logout') }}">Logout</a>
               </li>
-          </ul>>
+          </ul>
         {%else%}
           <ul class="navbar-nav ms-auto">
-                <li><a class="nav-link" href="{{ url_for('Login') }}">Login</a></li>
-                <li><a class="nav-link" href="{{ url_for('Register') }}">Register</a></li>
+                <li><a class="nav-link text-white" style="font-family: 'Poppins', sans-serif; font-size: 18px;"href="{{ url_for('Login') }}">Login</a></li>
+                <li><a class="nav-link text-white" style="font-family: 'Poppins', sans-serif; font-size: 18px;"href="{{ url_for('Register') }}">Register</a></li>
                 </ul>
             </li>
           </ul>
@@ -107,5 +132,90 @@
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
 
+
+    <section>
+        <footer class="bg-white">
+    <div class="container py-5">
+      <div class="row py-3">
+
+        <div class="col-lg-4 col-md-6 mb-lg-0">
+          <h6 class="text-uppercase font-weight-bold mb-4">About</h6>
+            <p class="text-muted mb-4" >The COVID-19 Vaccine Scheduling System will help those unvaccinated to make an appointment at
+                the nearest vaccination center with the preference and availability of the vaccines on each site.</p>
+        </div>
+
+        <div class="col-lg-2 col-md-6 mb-4 mb-lg-0">
+          <h6 class="text-uppercase font-weight-bold mb-4"align="center">Help</h6>
+          <ul class="list-unstyled mb-0" align="center">
+            <li class="mb-2"><a href="{{ url_for('FAQs') }}" class="text-muted">Frequently Asked Questions</a></li>
+          </ul>
+        </div>
+        <div class="col-lg-2 col-md-6 mb-4 mb-lg-0">
+          <h6 class="text-uppercase font-weight-bold mb-4" align="center">Links</h6>
+          <ul class="list-unstyled mb-0" align="center">
+            <li class="mb-2"><a href="{{ url_for('Login') }}" class="text-muted">Login</a></li>
+            <li class="mb-2"><a href="{{ url_for('Register') }}" class="text-muted">Register</a></li>
+            <li class="mb-2"><a href="{{ url_for('ScheduleAppointment') }}" class="text-muted">Schedule Appointment</a></li>
+            <li class="mb-2"><a href="{{ url_for('ViewAppointment') }}" class="text-muted">View Appointment</a></li>
+          </ul>
+        </div>
+        <div class="col-lg-4 col-md-6 mb-lg-0">
+        <img
+          src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/4f/Resbakuna_logo.png/1200px-Resbakuna_logo.png"
+          height="80"
+          alt="RESBAKUNA DOH Logo"
+          loading="lazy"
+          align="right"
+        />
+        </div>
+      </div>
+    </div>
+    <hr class="p-0 m-0 b-0">
+
+
+    <div class="bg-light py-2">
+      <div class="container text-center">
+        <p class="text-muted mb-0 py-2">&copy; 2022 RESBAKUNA All risghts reserved.</p>
+
+        </div>
+      </div>
+
+  </footer>
+    </section>
+<!-- Back to top button -->
+<button
+        type="button"
+        class="btn btn-danger btn-floating btn-lg"
+        id="btn-back-to-top"
+        >
+  <i class="fa fa-arrow-up"></i>
+</button>
+<script>
+    //Get the button
+    let mybutton = document.getElementById("btn-back-to-top");
+
+    // When the user scrolls down 20px from the top of the document, show the button
+    window.onscroll = function () {
+      scrollFunction();
+    };
+
+    function scrollFunction() {
+      if (
+        document.body.scrollTop > 20 ||
+        document.documentElement.scrollTop > 20
+      ) {
+        mybutton.style.display = "block";
+      } else {
+        mybutton.style.display = "none";
+      }
+    }
+    // When the user clicks on the button, scroll to the top of the document
+    mybutton.addEventListener("click", backToTop);
+
+    function backToTop() {
+      document.body.scrollTop = 0;
+      document.documentElement.scrollTop = 0;
+    }
+</script>
 </body>
 </html>
