fixed fonts and design

--- a/templates/base.html
+++ b/templates/base.html
@@ -175,7 +175,7 @@
 
     <div class="bg-light py-2">
       <div class="container text-center">
-        <p class="text-muted mb-0 py-2">&copy; 2022 RESBAKUNA All risghts reserved.</p>
+        <p class="text-muted mb-0 py-2">&copy; 2022 RESBAKUNA All rights reserved.</p>
 
         </div>
       </div>
