--- a/templates/FAQs.html
+++ b/templates/FAQs.html
@@ -16,18 +16,18 @@
             <div class="col-lg-6 mb-4">
                 <div class="card">
                     <header class="card-header">
-                      <h4 class="card-title mt-2">Answers to most of the frequently asked questions about COVID-19 Vaccines</h4>
+                      <h4 class="card-title mt-2" style = "font-family: 'Poppins', sans-serif;">Answers to most of the frequently asked questions about COVID-19 Vaccines</h4>
                     </header>
                 <article class="card-body">
                   <div class="accordion" id="accordionExample">
                     <div class="accordion-item">
                       <h2 class="accordion-header" id="headingOne">
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne" >
-                          <strong>How do vaccines prevent disease?</strong>
+                          <strong style = "font-family: 'Montserrat', sans-serif;">How do vaccines prevent disease?</strong>
                         </button>
                       </h2>
                       <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
-                        <div class="accordion-body">
+                        <div class="accordion-body" style = "font-family: 'Poppins', sans-serif;">
                           Vaccines mimic the virus or bacteria that causes disease and triggers the body’s creation of antibodies. These antibodies will provide protection once a person
                           is infected with the actual disease-causing virus or bacteria.
                         </div>
@@ -38,11 +38,11 @@
                     <div class="accordion-item">
                       <h2 class="accordion-header" id="headingTwo">
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                          <strong>How do vaccines differ?</strong>
+                          <strong style = "font-family: 'Montserrat', sans-serif;">How do vaccines differ?</strong>
                         </button>
                       </h2>
                       <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
-                        <div class="accordion-body">
+                        <div class="accordion-body" style = "font-family: 'Poppins', sans-serif;">
                           Vaccines differ in their composition and how they trigger the immune response to create antibodies. These antibodies protect the body from microorganisms and serve as protection
                           once a person gets infected with disease. Vaccines can be inactivated, weakened or killed copies of the whole or part of the virus or bacteria, or genetic product (like mRNA vaccines)
                           that creates protein copies without causing disease.
@@ -54,11 +54,11 @@
                     <div class="accordion-item">
                       <h2 class="accordion-header" id="headingThree">
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                          <strong>What are the possible side effects of vaccination?</strong>
+                          <strong style = "font-family: 'Montserrat', sans-serif;">What are the possible side effects of vaccination?</strong>
                         </button>
                       </h2>
                       <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
-                        <div class="accordion-body">
+                        <div class="accordion-body" style = "font-family: 'Poppins', sans-serif;">
                           The possible side effects of a vaccine include pain, redness, itchiness or swelling at the injection site (which may last a few hours); fever; feeling of weakness or fatigue; headache; dizziness; diarrhea; or nausea.
                           Consult the nearest healthcare professional if you experience any of these.
                         </div>
@@ -69,11 +69,11 @@
                     <div class="accordion-item">
                       <h2 class="accordion-header" id="headingFour">
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
-                          <strong>Is vaccination mandatory?</strong>
+                          <strong style = "font-family: 'Montserrat', sans-serif;">Is vaccination mandatory?</strong>
                         </button>
                       </h2>
                       <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour" data-bs-parent="#accordionExample">
-                        <div class="accordion-body">
+                        <div class="accordion-body" style = "font-family: 'Poppins', sans-serif;">
                           No, vaccination is not mandatory. But the government highly encourages the public to get vaccinated and be protected against preventable disease.
                         </div>
                       </div>
@@ -82,11 +82,11 @@
                     <div class="accordion-item">
                       <h2 class="accordion-header" id="headingFive">
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
-                          <strong>Why do we need to get vaccinated for COVID-19?</strong>
+                          <strong style = "font-family: 'Montserrat', sans-serif;">Why do we need to get vaccinated for COVID-19?</strong>
                         </button>
                       </h2>
                       <div id="collapseFive" class="accordion-collapse collapse" aria-labelledby="headingFive" data-bs-parent="#accordionExample">
-                        <div class="accordion-body">
+                        <div class="accordion-body" style = "font-family: 'Poppins', sans-serif;">
                           With the BIDA steps and observance of minimum public health standards,
                           vaccination is an important way to protect yourself from getting severe COVID-19.
                         </div>
@@ -96,11 +96,11 @@
                     <div class="accordion-item">
                       <h2 class="accordion-header" id="headingSix">
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseSix" aria-expanded="false" aria-controls="collapseSix">
-                          <strong>Are the COVID-19 vaccines safe and effective?</strong>
+                          <strong style = "font-family: 'Montserrat', sans-serif;">Are the COVID-19 vaccines safe and effective?</strong>
                         </button>
                       </h2>
                       <div id="collapseSix" class="accordion-collapse collapse" aria-labelledby="headingSix" data-bs-parent="#accordionExample">
-                        <div class="accordion-body">
+                        <div class="accordion-body" style = "font-family: 'Poppins', sans-serif;">
                           COVID-19 vaccines that are granted with Emergency Use Authorization (EUA) by the Food and Drug Administration (FDA) are considered safe and effective
                           based on the available evidence to date.
                         </div>
@@ -110,12 +110,12 @@
                     <div class="accordion-item">
                       <h2 class="accordion-header" id="headingSeven">
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseSeven" aria-expanded="false" aria-controls="collapseSeven">
-                          <strong>Are there risks for complications when given the COVID-19 vaccine?</strong>
+                          <strong style = "font-family: 'Montserrat', sans-serif;">Are there risks for complications when given the COVID-19 vaccine?</strong>
                         </button>
                       </h2>
                       <div id="collapseSeven" class="accordion-collapse collapse" aria-labelledby="headingSeven" data-bs-parent="#accordionExample">
-                        <div class="accordion-body">
-                          Yes, like all other vaccines, there are risks of complications BUT SEVERE OR LIFE-THREATENING REACTIONS ARE EXTREMELY RARE. The benefit of protection against severe COVID-19 is greater than the risk.
+                        <div class="accordion-body" style = "font-family: 'Poppins', sans-serif;">
+                          Yes, like all other vaccines, there are risks of complications <strong>BUT SEVERE OR LIFE-THREATENING REACTIONS ARE EXTREMELY RARE</strong>. The benefit of protection against severe COVID-19 is greater than the risk.
                           Anyone who will get the vaccine will be properly evaluated and closely monitored by health professionals to further minimize any risk.
                         </div>
                       </div>
@@ -127,7 +127,7 @@
         <div class="col-lg-6 mb-4">
                 <div class="card">
                     <header class="card-header">
-                      <h4 class="card-title mt-2">How to use the COVID-19 Vaccine Scheduling System</h4>
+                      <h4 class="card-title mt-2" style = "font-family: 'Poppins', sans-serif;">How to use the COVID-19 Vaccine Scheduling System</h4>
                     </header>
 
                     <article class="card-body">
