--- a/templates/base.html
+++ b/templates/base.html
@@ -151,8 +151,8 @@
 
         <div class="col-lg-4 col-md-6 mb-lg-0">
           <h6 class="text-uppercase font-weight-bold mb-4">About</h6>
-            <p class="text-muted mb-4" >The COVID-19 Vaccine Scheduling System will help those unvaccinated to make an appointment at
-                the nearest vaccination center with the preference and availability of the vaccines on each site.</p>
+            <p class="text-muted mb-4" >The COVID-19 Vaccine Scheduling System will help you make an appointment at the
+                    nearest vaccination centers with the availability of the vaccines and schedules on each site.</p>
         </div>
 
         <div class="col-lg-2 col-md-6 mb-4 mb-lg-0">
